fix: overlap back button

--- a/web/css/reskin-or/reskin.css
+++ b/web/css/reskin-or/reskin.css
@@ -770,6 +770,10 @@ table.scorecard td.headerT {
     text-decoration: none !important;
 }
 
+.backToHome {
+    margin-bottom: 32px;
+}
+
 .editPaymentBtn {
     margin-right: 12px;
 }
